--- a/src/App.css
+++ b/src/App.css
@@ -2,10 +2,15 @@
   text-align: center;
 }
 
+.App-Content {
+  max-width: 1280px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
 .App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
-  pointer-events: none;
+  height: 30px;
+  animation: App-logo-spin infinite 600s linear;
 }
 
 .App-header {
